unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Payment_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated** A link to the related payment method (if applicable).</description>
    <inlineHelpText>**System Calculated** A link to the related payment method (if applicable).</inlineHelpText>
    <label>Payment Method</label>
    <referenceTo>OrderApi__Payment_Method__c</referenceTo>
    <relationshipName>Payment_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>