unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Payment_Method_Token__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Payment_Method_Token__c</fullName>
    <description>**System Calculated** The API token for the payment method used for the transaction.</description>
    <inlineHelpText>**System Calculated** The API token for the payment method used for the transaction.</inlineHelpText>
    <label>Payment Method Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>