unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Payment_Method_Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Payment_Method_Type__c</fullName>
    <description>**System Calculated** The payment method type used for the api transaction.</description>
    <inlineHelpText>**System Calculated** The payment method type used for the api transaction.</inlineHelpText>
    <label>Payment Method Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>