unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Pending__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated** Pending (true/false) returned in the response body of the API Transaction.</description>
    <inlineHelpText>**System Calculated** Pending (true/false) returned in the response body of the API Transaction.</inlineHelpText>
    <label>Pending</label>
    <type>Checkbox</type>
</CustomField>