unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Phone__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Phone__c</fullName>
    <description>**System Calculated** The phone number sent to the gateway (optional/additional customer data)</description>
    <inlineHelpText>**System Calculated** The phone number sent to the gateway (optional/additional customer data)</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>