unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Process_Payment__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Process_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the systems will attempt to process the related E-payment.</description>
    <inlineHelpText>When checked, the systems will attempt to process the related E-payment.</inlineHelpText>
    <label>Process Payment</label>
    <type>Checkbox</type>
</CustomField>