unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Process_Void__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Process_Void__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the system will attempt to void this EPayment.</description>
    <inlineHelpText>When checked, the system will attempt to void this EPayment.</inlineHelpText>
    <label>Process Void</label>
    <type>Checkbox</type>
</CustomField>