unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Receipt_Created__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Receipt_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated** Checked when the E-Payment transaction is successfull and the system has created a new Receipt.</description>
    <inlineHelpText>**System Calculated** Checked when the E-Payment transaction is successfull and the system has created a new Receipt.</inlineHelpText>
    <label>Receipt Created</label>
    <type>Checkbox</type>
</CustomField>