unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Reference_Token__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Reference_Token__c</fullName>
    <description>**System Calculated** The reference token used (in lieu of a payment method) to invoke the transaction. (Reference Transactions are not supported by all gateways).</description>
    <inlineHelpText>**System Calculated** The reference token used (in lieu of a payment method) to invoke the transaction. (Reference Transactions are not supported by all gateways).</inlineHelpText>
    <label>Reference Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>