unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Refund_Receipt__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Refund_Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Caluclated** Refund Reciept record for which the Epayment is processed</description>
    <inlineHelpText>**System Caluclated** Refund Reciept record for which the Epayment is processed</inlineHelpText>
    <label>Refund Receipt</label>
    <referenceTo>OrderApi__Receipt__c</referenceTo>
    <relationshipLabel>Refund ePayments</relationshipLabel>
    <relationshipName>Refund_EPayments</relationshipName>
    <type>Lookup</type>
</CustomField>