unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Retain_on_Success__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Retain_on_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated** When checked, the system will store the credit card in a secure vault allowing you to charge the customer automatically using the same payment method at a later date.</description>
    <inlineHelpText>**System Calculated** When checked, the system will store the credit card in a secure vault allowing you to charge the customer automatically using the same payment method at a later date.</inlineHelpText>
    <label>Retain on Success</label>
    <type>Checkbox</type>
</CustomField>