unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override** Link to related Payment Schedule.</description>
    <inlineHelpText>**System Calculated/Override** Link to related Payment Schedule.</inlineHelpText>
    <label>Sales Order (Source)</label>
    <referenceTo>OrderApi__Sales_Order__c</referenceTo>
    <relationshipName>Payment_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>