unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Schedule_Frequency__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Schedule_Frequency__c</fullName>
    <description>**Conditionally Required** &quot;Daily&quot;, &quot;Weekly&quot;, &quot;Monthly&quot;, &quot;Quarterly&quot;, &quot;Semi-Annually&quot;, or &quot;Annually&quot; required when creating new payment schedules from an E-Payment transaction.</description>
    <inlineHelpText>**Conditionally Required** &quot;Daily&quot;, &quot;Weekly&quot;, &quot;Monthly&quot;, &quot;Quarterly&quot;, &quot;Semi-Annually&quot;, or &quot;Annually&quot; required when creating new payment schedules from an E-Payment transaction.</inlineHelpText>
    <label>Schedule Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>