unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Schedule_Type__c</fullName>
    <description>**Conditionally Required** &quot;Installment&quot;, &quot;Termed Recurring&quot;, or &quot;Evergreen Recurring&quot; required when creating new payment schedules from an E-Payment transaction.</description>
    <inlineHelpText>**Conditionally Required** &quot;Installment&quot;, &quot;Termed Recurring&quot;, or &quot;Evergreen Recurring&quot; required when creating new payment schedules from an E-Payment transaction.</inlineHelpText>
    <label>Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Evergreen Recurring</fullName>
            </value>
            <value>
                <fullName>Installment</fullName>
            </value>
            <value>
                <fullName>Termed Recurring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>