unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Scheduled_Payment__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Scheduled_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the Scheduled Payment record that generated the E-Payment

**Only populated when the E-Payment is generated from a Scheduled Payment record**</description>
    <inlineHelpText>Link to the Scheduled Payment record that generated the E-Payment

**Only populated when the E-Payment is generated from a Scheduled Payment record**</inlineHelpText>
    <label>Scheduled Payment</label>
    <referenceTo>OrderApi__Scheduled_Payment__c</referenceTo>
    <relationshipName>E_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>