unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Source_Code__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Source_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated** Link to related source code.</description>
    <inlineHelpText>**System Calculated** Link to related source code.</inlineHelpText>
    <label>Source Code</label>
    <referenceTo>OrderApi__Source_Code__c</referenceTo>
    <relationshipName>Payment_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>