unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Start_Date__c</fullName>
    <description>**Required Conditionally** The date to start the Payment Schedule, required to create new payment schedules from a E-Payment transaction.</description>
    <inlineHelpText>**Required Conditionally** The date to start the Payment Schedule, required to create new payment schedules from a E-Payment transaction.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>