unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__State__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__State__c</fullName>
    <description>The current state of the transaction</description>
    <inlineHelpText>The current state of the transaction</inlineHelpText>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>