unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Status__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Status__c</fullName>
    <description>**System Calculated** User-friendly status display with icon indicating success/failure of the Payment Activity.</description>
    <formula>IF (OrderApi__Succeeded__c, &quot;Success&quot;,
            IF (OrderApi__Has_Errors__c, &quot;Unsuccessful&quot;,
            IF (OrderApi__Cancelled__c,&quot;Cancelled&quot;,
            &quot;In-Progress&quot; &amp; &quot;  &quot; &amp; &quot;Pending&quot;)))</formula>
    <inlineHelpText>**System Calculated** User-friendly status display with icon indicating success/failure of the Payment Activity.</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>