unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Storage_State__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Storage_State__c</fullName>
    <description>**System Calculated** The storage state of the payment method used in the api transaction.</description>
    <inlineHelpText>**System Calculated** The storage state of the payment method used in the api transaction.</inlineHelpText>
    <label>Storage State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>