unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Succeeded__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Succeeded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated** The transaction succeeded without error.</description>
    <inlineHelpText>**System Calculated** The transaction succeeded without error.</inlineHelpText>
    <label>Succeeded</label>
    <type>Checkbox</type>
</CustomField>