unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Total__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Total__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The total amount of the epayment transaction.</description>
    <inlineHelpText>The total amount of the epayment transaction.</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>