unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Transaction_Token__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Transaction_Token__c</fullName>
    <description>**System Calculated** The token used to transact with the gateway.</description>
    <inlineHelpText>**System Calculated** The token used to transact with the gateway.</inlineHelpText>
    <label>Transaction Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>