unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Transaction_Type__c</fullName>
    <description>**System Calculated** The transaction type identified in the response of the api transaction.</description>
    <inlineHelpText>**System Calculated** The transaction type identified in the response of the api transaction.</inlineHelpText>
    <label>Transaction Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>