unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Verification_Value__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Verification_Value__c</fullName>
    <description>**System Calculated** The verification value of the payment method used in the api transaction.</description>
    <inlineHelpText>**System Calculated** The verification value of the payment method used in the api transaction.</inlineHelpText>
    <label>Verification Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>