unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Year__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Year__c</fullName>
    <description>**System Calculated** The credit card expiration year (YYYY).</description>
    <inlineHelpText>**System Calculated** The credit card expiration year (YYYY).</inlineHelpText>
    <label>Exp Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>