unpackaged/main/default/objects/OrderApi__EPayment__c/listViews/OrderApi__All.listView-meta.xml
<ListView>
    <fullName>OrderApi__All</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Status__c</columns>
    <columns>OrderApi__Transaction_Type__c</columns>
    <columns>OrderApi__Gateway_Transaction_ID__c</columns>
    <columns>OrderApi__Deposit_Account__c</columns>
    <columns>OrderApi__Business_Group__c</columns>
    <columns>OrderApi__Batch__c</columns>
    <columns>OrderApi__Payment_Gateway__c</columns>
    <columns>OrderApi__Full_Name__c</columns>
    <columns>OrderApi__Date__c</columns>
    <columns>OrderApi__Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>